--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Coffee Shop</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merienda:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -41,9 +44,9 @@
     </div>
   </header>
   <main class="main">
-    <div class="container">
       <!-- Блок About -->
       <section class="about">
+        <div class="container">
         <h2 class="about__title">About Us</h2>
         <div class="devider devider__wrap about__devider">
           <img class="img" src="" alt="devider icon">
@@ -62,6 +65,7 @@
           recommend. Did even but nor are most gave hope. Secure active living depend son
           repair day ladies now.
         </p>
+      </div>
       </section>
       <!-- Блок OurBest -->
       <section class="best">
@@ -92,7 +96,6 @@
           </ul>
         </div>
       </section>
-    </div>
   </main>
   <footer class="footer">
     <div class="container">
