Выполняет стилизацию хедера

--- a/index.html
+++ b/index.html
@@ -11,41 +11,41 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="page">
   <header class="header">
     <div class="container">
       <div class="header__menu">
-        <div class="logo">
-          <img class="logo__img" src="index.html" alt="Логотип Coffee Shop">
-        </div>
+        <a href="index.html" class="logo">
+          <img class="logo__img" src="img/logo.svg" alt="Логотип Coffee Shop">
+        </a>
         <nav class="navigation header__navigation">
-          <ul class="navigation__list">
+          <ul class="list navigation__list">
             <li class="navigation__item">
-              <a href="#" class="navigation__link">Our coffee</a>
+              <a href="#" class="link navigation__link">Our coffee</a>
             </li>
             <li class="navigation__item">
-              <a href="#" class="navigation__link">For your pleasure</a>
+              <a href="#" class="link navigation__link">For your pleasure</a>
             </li>
           </ul>
         </nav>
       </div>
       <!-- Блок Hero -->
       <div class="hero">
-        <h1 class="hero__title">Everything You Love About Coffee</h1>
+        <h1 class="page__title hero__title">Everything You Love About Coffee</h1>
         <div class="devider devider__wrap hero__devider">
-          <img class="img" src="" alt="devider icon">
+          <img class="img" src="img/beans-logo.svg" alt="devider icon">
         </div>
         <p class="hero__slogan">
           We makes every day full of energy and taste
           Want to try our beans?
         </p>
-        <a href="#" class="btn hero__link">More</a>
+        <a href="#" class="btn btn--action hero__link">More</a>
       </div>
     </div>
   </header>
   <main class="main">
       <!-- Блок About -->
-      <section class="about">
+      <section class="module about">
         <div class="container">
         <h2 class="about__title">About Us</h2>
         <div class="devider devider__wrap about__devider">
@@ -68,7 +68,7 @@
       </div>
       </section>
       <!-- Блок OurBest -->
-      <section class="best">
+      <section class="module best">
         <div class="container">
           <h2 class="best__title">About Us</h2>
           <ul class="list goods best__goods">
