Выполняет стилизацию модуля About Us

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
       <!-- Блок About -->
       <section class="module about">
         <div class="container">
-        <h2 class="about__title">About Us</h2>
+        <h2 class="module-title about__title">About Us</h2>
         <div class="devider devider__wrap about__devider">
-          <img class="img" src="" alt="devider icon">
+          <img class="img" src="img/beans-logo-black.svg" alt="devider icon">
         </div>
         <p class="about__text">
           Extremity sweetness difficult behaviour he of. On disposal of as landlord horrible.
