Добавляет стили для модуля Our Best

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <!-- Блок About -->
       <section class="module about">
         <div class="container">
-        <h2 class="module-title about__title">About Us</h2>
+        <h2 class="module__title about__title">About Us</h2>
         <div class="devider devider__wrap about__devider">
           <img class="img" src="img/beans-logo-black.svg" alt="devider icon">
         </div>
@@ -68,27 +68,27 @@
       </div>
       </section>
       <!-- Блок OurBest -->
-      <section class="module best">
+      <section class="module our-best">
         <div class="container">
-          <h2 class="best__title">About Us</h2>
-          <ul class="list goods best__goods">
+          <h2 class="module__title our-best__title">Our Best</h2>
+          <ul class="list goods our-best__goods">
             <li class="goods__item good">
               <p class="good__img-wrap">
-                <img src="good__img" alt="Изображение товара 1">
+                <img class="good__img" src="img/product-1.jpg" alt="Изображение товара 1">
               </p>
               <h3 class="good__title">Solimo Coffee Beans 2 kg</h3>
               <p class="good__price">10.73$</p>
             </li>
             <li class="goods__item good">
               <p class="good__img-wrap">
-                <img src="good__img" alt="Изображение товара 2">
+                <img class="good__img" src="img/product-2.jpg" alt="Изображение товара 2">
               </p>
               <h3 class="good__title">Presto Coffee Beans 1 kg</h3>
               <p class="good__price">15.99$</p>
             </li>
             <li class="goods__item good">
               <p class="good__img-wrap">
-                <img src="good__img" alt="Изображение товара 3">
+                <img class="good__img" src="img/product-3.jpg" alt="Изображение товара 3">
               </p>
               <h3 class="good__title">AROMISTICO Coffee 1 kg</h3>
               <p class="good__price">6.99$</p>
