Добавляет стили футера

--- a/index.html
+++ b/index.html
@@ -99,21 +99,23 @@
   </main>
   <footer class="footer">
     <div class="container">
-      <div class="logo">
-        <img class="logo__img" src="index.html" alt="Логотип Coffee Shop">
+      <div class="footer__menu">
+        <a class="logo footer__logo" html="index.html">
+          <img class="logo__img" src="img/logo-black.svg" alt="Логотип Coffee Shop">
+        </a>
+        <nav class="navigation footer__navigation">
+          <ul class="list navigation__list">
+            <li class="navigation__item">
+              <a href="#" class="link navigation__link">Our coffee</a>
+            </li>
+            <li class="navigation__item">
+              <a href="#" class="link navigation__link">For your pleasure</a>
+            </li>
+          </ul>
+        </nav>
       </div>
-      <nav class="navigation footer__navigation">
-        <ul class="navigation__list">
-          <li class="navigation__item">
-            <a href="#" class="navigation__link">Our coffee</a>
-          </li>
-          <li class="navigation__item">
-            <a href="#" class="navigation__link">For your pleasure</a>
-          </li>
-        </ul>
-      </nav>
-      <div class="devider devider__wrap about__devider">
-        <img class="img" src="" alt="devider icon">
+      <div class="devider devider__wrap footer__devider">
+        <img class="img" src="img/beans-logo-black.svg" alt="devider icon">
       </div>
     </div>
   </footer>
