Добавляет вёрстку блока About our beans

--- a/coffee.html
+++ b/coffee.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Coffee Shop</title>
+  <title>Coffee Shop | Coffee</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="page">
+<body class="page page--coffee">
   <header class="header">
     <div class="container">
       <div class="header__menu">
@@ -31,12 +31,42 @@
       </div>
       <!-- Блок Hero -->
       <div class="hero">
-        <h1 class="page__title hero__title">Everything You Love About Coffee</h1>
+        <h1 class="page__title hero__title">Our Coffee</h1>
       </div>
     </div>
   </header>
   <main class="main">
-      
+    <!-- About coffee -->
+    <section class="module about-beans">
+      <div class="container">
+        <div class="about-beans__img-wrap">
+          <img class="about-beans__img" src="img/girl.jpg" alt="Девушка с кофе">
+        </div>
+        <div class="about-beans__info">
+          <div class="content">
+            <h2 class="module__title about-beans__title">About our beans</h2>
+            <div class="devider devider__wrap about-beans__devider">
+              <img class="img" src="img/beans-logo-black.svg" width="272" height="355" alt="devider icon">
+            </div>
+            <p class="about-beans__text">
+              Extremity sweetness difficult behaviour he of. On disposal of as landlord horrible.
+            </p>
+            <p class="about-beans__text">
+              Afraid at highly months do things on at. Situation recommend objection do intention<br>
+              so questions. 
+              <br>As greatly removed calling pleased improve an. 
+              <br>Last ask him cold feel
+              <br>met spot shy want. Children me laughing we 
+              <br>prospect answered followed. At it went
+              <br>is song that held help face.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <div class="devider devider--line">
+      <img src="img/line.svg" alt="Разделитель">
+    </div>
   </main>
   <footer class="footer">
     <div class="container">
