Добавляет черновую вёрстку списка карточек на странице Our coffee

--- a/coffee.html
+++ b/coffee.html
@@ -64,9 +64,83 @@
         </div>
       </div>
     </section>
+    <!-- Разделитель 2 -->
     <div class="devider devider--line">
       <img src="img/line.svg" alt="Разделитель">
     </div>
+    <!-- Список товаров с фильтром -->
+    <section class="products">
+      <div class="container">
+        <!-- Фильтр -->
+        <div class="filter">
+
+        </div>
+        <!-- Список товаров -->
+        <ul class="cards__list">
+          <li class="card">
+            <a href="#" class="card_link">
+              <div class="card__img-wrap">
+                <img class="card__img" src="img/product-1.jpg" alt="Изображение товара 1">
+              </div>
+              <h3 class="card__title">Solimo Coffee Beans 2 kg</h3>
+              <span class="card__country">Brazil</span>
+              <span class="card__price">10.73$</span>
+            </a>
+          </li>
+          <li class="card">
+            <a href="#" class="card_link">
+              <div class="card__img-wrap">
+                <img class="card__img" src="img/product-2.jpg" alt="Изображение товара 2">
+              </div>
+              <h3 class="card__title">Solimo Coffee Beans 2 kg</h3>
+              <span class="card__country">Brazil</span>
+              <span class="card__price">10.73$</span>
+            </a>
+          </li>
+          <li class="card">
+            <a href="#" class="card_link">
+              <div class="card__img-wrap">
+                <img class="card__img" src="img/product-3.jpg" alt="Изображение товара 3">
+              </div>
+              <h3 class="card__title">Solimo Coffee Beans 2 kg</h3>
+              <span class="card__country">Brazil</span>
+              <span class="card__price">10.73$</span>
+            </a>
+          </li>
+          <!-- 2 ряд -->
+          <li class="card">
+            <a href="#" class="card_link">
+              <div class="card__img-wrap">
+                <img class="card__img" src="img/product-1.jpg" alt="Изображение товара 1">
+              </div>
+              <h3 class="card__title">Solimo Coffee Beans 2 kg</h3>
+              <span class="card__country">Brazil</span>
+              <span class="card__price">10.73$</span>
+            </a>
+          </li>
+          <li class="card">
+            <a href="#" class="card_link">
+              <div class="card__img-wrap">
+                <img class="card__img" src="img/product-2.jpg" alt="Изображение товара 2">
+              </div>
+              <h3 class="card__title">Solimo Coffee Beans 2 kg</h3>
+              <span class="card__country">Brazil</span>
+              <span class="card__price">10.73$</span>
+            </a>
+          </li>
+          <li class="card">
+            <a href="#" class="card_link">
+              <div class="card__img-wrap">
+                <img class="card__img" src="img/product-1.jpg" alt="Изображение товара 3">
+              </div>
+              <h3 class="card__title">Solimo Coffee Beans 2 kg</h3>
+              <span class="card__country">Brazil</span>
+              <span class="card__price">10.73$</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </section>
   </main>
   <footer class="footer">
     <div class="container">
