--- a/index.html
+++ b/index.html
@@ -73,25 +73,31 @@
           <h2 class="module__title our-best__title">Our Best</h2>
           <ul class="list goods our-best__goods">
             <li class="goods__item good">
-              <p class="good__img-wrap">
-                <img class="good__img" src="img/product-1.jpg" alt="Изображение товара 1">
-              </p>
-              <h3 class="good__title">Solimo Coffee Beans 2 kg</h3>
-              <p class="good__price">10.73$</p>
+              <a href="#" class="good_link">
+                <p class="good__img-wrap">
+                  <img class="good__img" src="img/product-1.jpg" alt="Изображение товара 1">
+                </p>
+                <h3 class="good__title">Solimo Coffee Beans 2 kg</h3>
+                <p class="good__price">10.73$</p>
+              </a>
             </li>
             <li class="goods__item good">
-              <p class="good__img-wrap">
-                <img class="good__img" src="img/product-2.jpg" alt="Изображение товара 2">
-              </p>
-              <h3 class="good__title">Presto Coffee Beans 1 kg</h3>
-              <p class="good__price">15.99$</p>
+              <a href="#" class="good_link">
+                <p class="good__img-wrap">
+                  <img class="good__img" src="img/product-2.jpg" alt="Изображение товара 2">
+                </p>
+                <h3 class="good__title">Presto Coffee Beans 1 kg</h3>
+                <p class="good__price">15.99$</p>
+              </a>
             </li>
             <li class="goods__item good">
-              <p class="good__img-wrap">
-                <img class="good__img" src="img/product-3.jpg" alt="Изображение товара 3">
-              </p>
-              <h3 class="good__title">AROMISTICO Coffee 1 kg</h3>
-              <p class="good__price">6.99$</p>
+              <a href="#" class="good_link">
+                <p class="good__img-wrap">
+                  <img class="good__img" src="img/product-3.jpg" alt="Изображение товара 3">
+                </p>
+                <h3 class="good__title">AROMISTICO Coffee 1 kg</h3>
+                <p class="good__price">6.99$</p>
+              </a>
             </li>
           </ul>
         </div>
