Меняет классы внутренних страниц, готовит разметку для страницы Coffee Item

--- a/coffee-item.html
+++ b/coffee-item.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="page">
+<body class="page page--inner">
   <header class="header">
     <div class="container">
       <div class="header__menu">
@@ -31,12 +31,21 @@
       </div>
       <!-- Блок Hero -->
       <div class="hero">
-        <h1 class="page__title hero__title">Everything You Love About Coffee</h1>
+        <h1 class="page__title hero__title">Our Coffee</h1>
       </div>
     </div>
   </header>
   <main class="main">
-    
+    <!-- About It -->
+    <section class="module about-it">
+      <div class="container">
+        <div class="about-it__img">
+          <img src="img/aromistico.jpg" alt="Кофе Aromistico">
+        </div>
+        <div class="about-it__info">
+        </div>
+      </div>
+    </section>
   </main>
   <footer class="footer">
     <div class="container">
