--- a/coffee.html
+++ b/coffee.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="page page--coffee">
+<body class="page page--inner">
   <header class="header">
     <div class="container">
       <div class="header__menu">
